fix(styles/prose): reduce inline code py from 0.2rem to 0.1rem for better spacing

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -63,7 +63,7 @@
 
     /* align with shiki colors */
     :not(pre) > code {
-      @apply bg-[#24292e] text-[#e1e4e8] relative rounded px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+      @apply bg-[#24292e] text-[#e1e4e8] relative rounded px-[0.3rem] py-[0.1rem] font-mono text-sm font-semibold;
     }
 
     a {
